--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test</title>
+  </head>
+  <body>
+    <h1>Das ist meine Lösung</h1>
+  </body>
+</html>
