--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Das ist meine Lösung</h1>
-  </body>
+    <head>
+        <title>Module 2 - Solution</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <h1 id="heading">Our Menu</h1>
+        <div class="container">
+            <section class="element">
+                <div class="pHeadingDiv">
+                    <p class="pHeadingText">Chicken</p>
+                </div>
+                <div class="regParagraphDiv">
+                    <p class="regParagraphText"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimat.</p>
+                </div>
+            </section>
+            <section class="element">
+                <div class="pHeadingDiv">
+                    <p class="pHeadingText" id="secondPT">Beef</p>
+                </div>
+                <div class="regParagraphDiv">
+                    <p class="regParagraphText"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimat.</p>
+                </div>
+            </section>
+            <section class="element">
+                <div class="pHeadingDiv">
+                    <p class="pHeadingText" id="thirdPT">Sushi</p>
+                </div>
+                <div class="regParagraphDiv">
+                    <p class="regParagraphText"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimat.</p>
+                </div>
+            </section>
+        </div>
+    </body>
 </html>
