--- a/login/Login.html
+++ b/login/Login.html
@@ -25,7 +25,7 @@
 						<div class="collapse navbar-collapse" id="collapsable-nav">
 							<ul class="navbar-nav navbar-right">
 								<li><a href="#">DE</a></li>
-								<li><a href="#">EN</a></li>
+								<li><a id="engLink" href="#">EN</a></li>
 							</ul>
 						</div>
 					</div>
@@ -71,8 +71,14 @@
 			var max = 2;
 			var randomNumber = Math.round(Math.random() * (max - min)) + min;
 			var imageURL = imagesArray[randomNumber];
-			alert(imageURL);
-			document.getElementById("body").style.backgroundImage = "url(" + imageUrl + ")";
+			document.body.style.backgroundImage = "url(" + imageURL + ")";
+			
+			var link = document.getElementById("engLink");
+			link.addEventListener("click", translateENG);
+			function translateENG {
+				alert("Hallo");
+				//document.getElementById("usernameLabel").innnerHTML = "Username";
+			}
 		</script>
 		<!-- jQuery (Bootstrap JS plugins depend on it) -->
         <script src="js/jquery-2.1.4.min.js"></script>
