--- a/login/Login2.html
+++ b/login/Login2.html
@@ -13,7 +13,7 @@
 			<nav class="navbar navbar-expand">
 				<div class="container-fluid">
 					<div class="navbar-header" href="Login2.html">
-						<a class="navbar-brand col-md-4" href="Login.html">
+						<a class="navbar-brand" href="Login.html">
 							<img id="logo" src="file:/M:/Daten/MTULoginPage/images/MTULogoBlackNoBG.png">
 						</a>
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -22,6 +22,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
+						<div class="collapse navbar-collapse" id="collapsable-nav">
+							<ul class="navbar-nav navbar-right me-auto">
+								<li class="nav-item"><a id="deLink" class="colorLink nav-link" href="#">DE</a></li>
+								<li class="nav-item"><a id="engLink" class="colorLink nav-link" href="#">EN</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</nav>
