--- a/login/Login2.html
+++ b/login/Login2.html
@@ -11,31 +11,35 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-expand">
-				<div class="container-fluid">
-					<div class="navbar-header" href="Login2.html">
-						<a class="navbar-brand" href="Login.html">
-							<img id="logo" src="file:/M:/Daten/MTULoginPage/images/MTULogoBlackNoBG.png">
-						</a>
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-							<span class="sr-only">Toggle Navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<div class="collapse navbar-collapse" id="collapsable-nav">
-							<ul class="navbar-nav navbar-right me-auto">
-								<li class="nav-item"><a id="deLink" class="colorLink nav-link" href="#">DE</a></li>
-								<li class="nav-item"><a id="engLink" class="colorLink nav-link" href="#">EN</a></li>
-							</ul>
+				<div class="container-fluid> 
+					<div class="navbar-header" href="Login.html">
+						<div class="row">
+							<a class="navbar-brand col-md-2" href="Login.html">
+								<img id="logo" src="file:/M:/Daten/MTULoginPage/images/MTULogoBlackNoBG.png">
+							</a>
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+								<span class="sr-only">Toggle Navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<div class="collapse navbar-collapse justify-content-end" id="collapsable-nav">
+								<ul class="navbar-nav navbar-right me-auto">
+									<li><a id="deLink" class="colorWhiteLi" href="#">DE</a></li>
+									<li><a id="engLink" class="colorWhiteLi" href="#">EN</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</nav>
 		</header>
-	
-	
-	
-	
+		<div class="main-content">
+			<div class="login-div">
+				<form class="login-form">
+				</form>
+			</div>
+		</div>
 		<!-- jQuery (Bootstrap JS plugins depend on it) -->
         <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
